remove <p> from posts to fix alignment

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ a:hover, a:focus, a:active {
 p {
     margin: 1em 0;
     line-height: 1.5;
-    text-align: left;
+    text-align: justify;
  }
 p code {
     background-color: #eee;
